# ssz_types

./: Cargo.toml  README.md
.github/workflows/: test-suite.yml
benches/: bitfield.rs  decode.rs  encode_decode.rs
src/: bitfield.rs  context_deserialize.rs  fixed_vector.rs  fixed_vector_u8.rs  lib.rs  list_encoded_option.rs  optional.rs  tree_hash.rs  typenum_helpers.rs  variable_list.rs  variable_list_u8.rs
src/runtime_types/: context_deserialize.rs  mod.rs  runtime_fixed_vector.rs  runtime_variable_list.rs
src/serde_utils/: hex_fixed_vec.rs  hex_var_list.rs  quoted_u64_fixed_vec.rs  quoted_u64_var_list.rs
