[package]
name = "ssz_types"
version = "0.11.0"
edition = "2021"
description = "List, vector and bitfield types for SSZ"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/sigp/ssz_types"
documentation = "https://docs.rs/ssz_types"
keywords = ["ethereum"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
tree_hash = "0.10.0"
ethereum_serde_utils = "0.8.0"
ethereum_ssz = "0.9.0"
serde = "1.0.0"
serde_derive = "1.0.0"
typenum = { version = "1.12.0", features = ["const-generics"] }
smallvec = "1.8.0"
arbitrary = { version = "1.0", features = ["derive"], optional = true }
itertools = "0.13.0"

[dev-dependencies]
serde_json = "1.0.0"
tree_hash_derive = "0.10.0"

[patch.crates-io]
tree_hash = { path = "../tree_hash/tree_hash" }
tree_hash_derive = { path = "../tree_hash/tree_hash_derive" }
