[package]
name = "ssz_types"
version = "0.12.0"
edition = "2021"
description = "List, vector and bitfield types for SSZ"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/sigp/ssz_types"
documentation = "https://docs.rs/ssz_types"
keywords = ["ethereum"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
tree_hash = "0.10.0"
ethereum_serde_utils = "0.8.0"
ethereum_ssz = "0.9.0"
serde = "1.0.0"
serde_derive = "1.0.0"
typenum = "1.12.0"
smallvec = "1.8.0"
arbitrary = { version = "1.0", features = ["derive"], optional = true }
itertools = "0.14.0"

[dev-dependencies]
criterion = "0.7.0"
ethereum_ssz_derive = "0.9.0"
serde_json = "1.0.0"
tree_hash_derive = "0.10.0"

[[bench]]
harness = false
name = "encode_decode"

# FIXME: remove before release
[patch.crates-io]
ethereum_ssz = { git = "https://github.com/sigp/ethereum_ssz", branch = "main" }
ethereum_ssz_derive = { git = "https://github.com/sigp/ethereum_ssz", branch = "main" }
