[package]
name = "ssz_types"
version = "0.12.2"
edition = "2021"
description = "List, vector and bitfield types for SSZ"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/sigp/ssz_types"
documentation = "https://docs.rs/ssz_types"
keywords = ["ethereum"]
categories = ["cryptography::cryptocurrencies"]

[features]
default = ["ring"]
ring = ["tree_hash/ring"]
runtime-types = ["dep:context_deserialize", "dep:educe"]

[dependencies]
tree_hash = { version = "0.11.0", default-features = false }
ethereum_serde_utils = "0.8.0"
ethereum_ssz = "0.9.0"
serde = "1.0.0"
serde_derive = "1.0.0"
typenum = "1.12.0"
smallvec = "1.8.0"
arbitrary = { version = "1.0", features = ["derive"], optional = true }
itertools = "0.14.0"

# Optional dependencies
educe = { version = "0.6", optional = true }
context_deserialize = { version = "0.1", optional = true }

[dev-dependencies]
criterion = "0.7.0"
serde_json = "1.0.0"
tree_hash_derive = "0.11.0"

[[bench]]
harness = false
name = "encode_decode"
